AWS/Deployment-mkconsumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkconsumer
  labels:
    app: mkconsumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mkconsumer
  template:
    metadata:
      labels:
        app: mkconsumer
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "mkconsumer"
        dapr.io/app-port: "8080"
        dapr.io/log-level: "info"
    spec:
      serviceAccountName: mkconsumer-sa
      containers:
      - name: mkconsumer
        image: 872823407497.dkr.ecr.us-east-1.amazonaws.com/mkconsumer:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
